# Designing_large_systems

./: CMakeLists.txt  README.md
task1/: main.cpp
task2/: ex1_1.cpp  ex1_2.cpp  ex2.cpp
task3/: main.cpp
task4/: tree.cpp  tree.h
task8/: check.py  generate.py  main.cpp  start.sh
